force-app/main/default/objects/Droid_Parts__c/Droid_Parts__c.object-meta.xml
<CustomObject>
    <label>Droid Parts</label>
    <nameField>
        <label>Droid Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Droid Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>