force-app/main/default/objects/Droid_Parts__c/fields/Droid_Part__c.field-meta.xml
<CustomField>
    <fullName>Droid_Part__c</fullName>
    <label>Droid Part</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metals</fullName>
            </value>
            <value>
                <fullName>Wiring</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Fixtures</fullName>
            </value>
            <value>
                <fullName>Insulators</fullName>
            </value>
            <value>
                <fullName>Conductors</fullName>
            </value>
            <value>
                <fullName>Chips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>