force-app/main/default/objects/Droid_Parts__c/fields/Military_Grade__c.field-meta.xml
<CustomField>
    <fullName>Military_Grade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the ordered parts are to be Military grade then both quality of parts and prices will reflect this</description>
    <label>Military Grade</label>
    <type>Checkbox</type>
</CustomField>