force-app/main/default/objects/Droid_Parts__c/fields/Part_Price__c.field-meta.xml
<CustomField>
    <fullName>Part_Price__c</fullName>
    <description>The combined cost of pieces, shipping and labor  necessary to make the part</description>
    <inlineHelpText>Please enter the amount that it cost in both assembled pieces, shipping and labor to acquire the part.</inlineHelpText>
    <label>Part Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>